# ygrep

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-binaries.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hook.json  ygrep_watch.py  ygrep_watch_kill.py
claude-plugin/skills/ygrep/: SKILL.md
crates/ygrep-cli/: Cargo.toml
crates/ygrep-cli/src/: main.rs  output.rs
crates/ygrep-cli/src/commands/: index.rs  indexes.rs  install.rs  mod.rs  search.rs  status.rs
crates/ygrep-core/: Cargo.toml
crates/ygrep-core/src/: config.rs  error.rs  lib.rs
crates/ygrep-core/src/embeddings/: cache.rs  mod.rs  model.rs
crates/ygrep-core/src/fs/: mod.rs  symlink.rs  walker.rs
crates/ygrep-core/src/index/: mod.rs  schema.rs  vector.rs  writer.rs
crates/ygrep-core/src/search/: hybrid.rs  mod.rs  results.rs  searcher.rs
crates/ygrep-core/src/watcher/: mod.rs
crates/ygrep-daemon/: Cargo.toml
crates/ygrep-daemon/src/: lib.rs  protocol.rs
