[workspace]
resolver = "2"
members = [
    "crates/ygrep-core",
    "crates/ygrep-daemon",
    "crates/ygrep-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yetidevworks/ygrep"
authors = ["YetiDevWorks"]

[workspace.dependencies]
# Internal crates
ygrep-core = { path = "crates/ygrep-core" }
ygrep-daemon = { path = "crates/ygrep-daemon" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Search & Indexing
tantivy = "0.22"
fastembed = "4"
hnsw_rs = "0.3"
lru = "0.12"
bincode = "1"

# File Watching
notify = "7"
notify-debouncer-full = "0.4"
ignore = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utils
parking_lot = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
fs2 = "0.4"
dirs = "5"
walkdir = "2"
