[package]
name = "ygrep-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Search & Indexing
tantivy = { workspace = true }
fastembed = { workspace = true }
hnsw_rs = { workspace = true }
lru = { workspace = true }
bincode = { workspace = true }

# File Watching
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
ignore = { workspace = true }

# Utils
parking_lot = { workspace = true }
xxhash-rust = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
