[package]
name = "ygrep-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ygrep-core = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
parking_lot = { workspace = true }
fs2 = { workspace = true }
dirs = { workspace = true }
